LIST OF CHANGES
---------------

 - changes for pools with >999 samples, LSF job array index now 5 digits
   modified tests

release 51.0
 - use npg_irods npg_publish_illumina_run.pl in place of data_handling irods_bam_loader.pl
 - provide appropiately changed second index read tags for ordered flowcell
   instruments (typically rev. complement) e.g. HiSeqX
 - in both the analysis and archival function order have an extra
   ml warehouse loader job to set the stage for loading to iRODS
 - warehouse loaders that are run after setting qc complete date
   wait for the runfolder to be moved to outgoing, their log location
   is updated accordingly

release 50.3
 - use 'purpose' field to decide if qc_run
 - study-specific software stack for the analysis pipeline
 - added new module for p4 stage1 analysis

release 50.2
 - names of the pipeline daemon modules and scripts harmonised
 - the daemon module does not inherit from the pipeline base class thus
   reducing the number of command line script options
 - common code moved from the daemon scripts to the daemon module
 - a new role for common accessors

release 50.1
 - bug fix to allow archival daemon to work (restore availabilty of run folder
   finding method)

release 50.0
 - purge carriage returns (as well line feeds) from study descriptions for RG header
   records (xml lims driver has previously done this as part of XML parsing)
 - require minimum version 5.10 for perl
 - add study analysis configuration accessor
 - simpler name for the archival daemon module
 - parent class for pipeline daemons
 - dry_run option for daemons
 - consistent behaviour of the archival and analysis daemons
   when LIMs data are not available in the ml warehouse and
   the run is not a QC run, the run is skipped
 - the pipeline daemons define the type of the pipeline to run
   (default, gclp, qc) and set appropriate backward-compatible
   options for the pipeline script
 - Log::Log4perl logger is used in pipeline daemons