@@ -1,6 +1,8 @@
 LIST OF CHANGES
 ---------------
 
+ - replaced bamcat .. by samtools1 cat .. in seqchksum comparision
+   previous command line was too long for large pools
  - changes for pools with >999 samples, LSF job array index now 5 digits
    modified tests
 
